--- a/index.html
+++ b/index.html
@@ -1,36 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./Styles/normalize.css">
     <link rel="stylesheet" href="./Styles/Style.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
     <title>Proyecto Final</title>
 </head>
 <body>
-    <menu class="menu-principal">
-        <a href="index.html"><img src="./img/NICKLOGO3.png" alt="Logo" class="logo"></a>
-        <nav class="menu-principal__nav">
-            <ul class="menu-principal__ul">
-                <li class="menu-principal__li"><a href="./pages/about.html" class="menu-principal__a">About</a></li>
-                <li class="menu-principal__li"><a href="./pages/portfolio.html" class="menu-principal__a">Portfolio</a></li>
-                <li class="menu-principal__li"><a href="./pages/experience.html" class="menu-principal__a">Experience</a></li>
-                <li class="menu-principal__li"><a href="./pages/contact.html" class="menu-principal__a">Contact</a></li>
-            </ul>
-            <ul class="menu-principal__ul-i">
-                    <li class="menu-principal__li-i"><a href="https://www.facebook.com/nicanor.britos/"><i class="fa-brands fa-facebook menu-principal__i"></i></a></li>
-                    <li class="menu-principal__li-i"><a href="https://www.instagram.com/nick_britos1/"><i class="fa-brands fa-instagram menu-principal__i"></i></a></li>
-                    <li class="menu-principal__li-i"><a href="https://twitter.com/nickbritos1"><i class="fa-brands fa-square-twitter menu-principal__i"></i></a></li>
-                    <li class="menu-principal__li-i"><a href="https://www.linkedin.com/in/nicanor-britos-04b449245/"><i class="fa-brands fa-linkedin menu-principal__i"></i></a></li>
-            </ul>
+    <header>
+        <nav class="navegador navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler bg-light menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-enlaces nav-link active text-white" aria-current="page" href="index.html">Nicanor Britos</a>
+                        <a class="nav-enlaces nav-link" href="/pages/about.html">Sobre Mi</a>
+                        <a class="nav-enlaces nav-link" href="/pages/portfolio.html">Proyectos</a>
+                        <a class="nav-enlaces nav-link" href="/pages/experience.html">Habilidades</a>
+                        <a class="nav-enlaces nav-link" href="/pages/contact.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
-    </menu>
-    <div class="web-conteiner">
-        <h2 class="web-conteiner__h2 index1">Hi! I'm Nick</h2>
-        <h2 class="web-conteiner__h2 index2">And i'm</h2>
-        <h2 class="web-conteiner__h2 index3">Frontend Developer</h2>
-    </div>
+        <img class="fondo-responsive" src="/img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
+        <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <div class="d-flex flex-wrap flex-column align-items-center">
+            <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
+            <p class="text-white">Frontend Developer</p>
+        </div>
+    </header>
+    <section class="banner d-flex align-items-center flex-wrap text-center">
+        <img class="responsive-none" src="https://dummyimage.com/360x440" alt="">
+        <div class="d-flex flex-wrap justify-content-center flex-column">
+            <h2 class="p-5 fs-1">“No programo para solucionar problemas, programo para crear soluciones”</h2>
+            <p class="text-end me-5 text-secondary">Mentalidad adquirida de Lucas Dalto</p>
+        </div>
+    </section>
+    <section class="proyectos d-flex flex-wrap justify-content-end">
+        <h3 class="proyectos__titulo m-3 text-white">Mis Proyectos</h3>
+        <div class="proyectos-container mt-5">
+            <div class="tarjeta">
+                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <div class="contenido">
+                    <h3 class="fw-bold text-white">eComerce</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <div class="contenido">
+                    <h3 class="fw-bold text-white">eComerce</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <div class="contenido">
+                    <h3 class="fw-bold text-white">eComerce</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <h3 class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="/pages/portfolio.html">Hacé click acá</a></h3>
+    <section class="d-flex flex-wrap justify-content-end pt-5">
+        <div class="section-contacto">
+            <h3 class="text-white text-start p-5">¿Te gustó mi trabajo?</h3>
+            <p class="text-white ps-5">¿Tenés dudas? ¿Querés trabajar conmigo? <a class="text-decoration-none" href="/pages/contact.html">Contactate acá</a></p>
+        </div>
+        <img class="responsive-none" src="https://dummyimage.com/360x440" alt="">
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
