--- a/pages/about.html
+++ b/pages/about.html
@@ -4,36 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/normalize.css">
     <link rel="stylesheet" href="../Styles/Style.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Sobre Mi</title>
 </head>
 <body>
-    <menu class="menu-principal">
-        <a href="../index.html"><img src="../img/NICKLOGO3.png" alt="Logo" class="logo"></a>
-        <nav class="menu-principal__nav">
-            <ul class="menu-principal__ul">
-                <li class="menu-principal__li"><a href="about.html" class="menu-principal__a">About</a></li>
-                <li class="menu-principal__li"><a href="portfolio.html" class="menu-principal__a">Portfolio</a></li>
-                <li class="menu-principal__li"><a href="experience.html" class="menu-principal__a">Experience</a></li>
-                <li class="menu-principal__li"><a href="contact.html" class="menu-principal__a">Contact</a></li>
-            </ul>
-        <ul class="menu-principal__ul-i">
-                <li class="menu-principal__li-i"><a href="https://www.facebook.com/nicanor.britos/"><i class="fa-brands fa-facebook menu-principal__i"></i></a></li>
-                <li class="menu-principal__li-i"><a href="https://www.instagram.com/nick_britos1/"><i class="fa-brands fa-instagram menu-principal__i"></i></a></li>
-                <li class="menu-principal__li-i"><a href="https://twitter.com/nickbritos1"><i class="fa-brands fa-square-twitter menu-principal__i"></i></a></li>
-                <li class="menu-principal__li-i"><a href="https://www.linkedin.com/in/nicanor-britos-04b449245/"><i class="fa-brands fa-linkedin menu-principal__i"></i></a></li>
-            </ul>
+    <header>
+        <nav class="navegador navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-enlaces nav-link active text-white" aria-current="page" href="/index.html">Nicanor Britos</a>
+                        <a class="nav-enlaces nav-link" href="../pages/about.html">Sobre Mi</a>
+                        <a class="nav-enlaces nav-link" href="../pages/portfolio.html">Proyectos</a>
+                        <a class="nav-enlaces nav-link" href="../pages/experience.html">Habilidades</a>
+                        <a class="nav-enlaces nav-link" href="../pages/contact.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
-    </menu>
-    <div class="web-conteiner">
-        <h2 class="web-conteiner__h2">About me</h2>
-        <div class="info">
-            <p class="info__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam impedit totam tempora vel ab temporibus iusto, id dignissimos natus dicta molestiae officiis maiores culpa, nobis accusamus incidunt suscipit ex eum.
-            Repudiandae voluptatibus fugit ullam, tempore natus alias quia maxime blanditiis sapiente eveniet repellat iste fuga magni ut velit aliquid eos aspernatur cupiditate, explicabo excepturi, nesciunt adipisci molestias accusamus voluptas. Minima!
-            Aut mollitia adipisci architecto voluptatem dolore tenetur vel alias numquam atque, id cum ratione magni deleniti! Dolore voluptatibus aperiam dolor cum, ut in sint magni minus, voluptatem quos ex iure.</p>
+        <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <div class="d-flex flex-column align-items-center">
+            <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
+            <p class="text-white">Frontend Developer</p>
         </div>
-    </div>
+    </header>
+    <section class="d-flex justify-content-end">
+        <div>
+            <h3 class="text-white text-start p-5">Sobre Mi</h3>
+            <p class="text-white ps-5 pe-5">Soy un desarrollador Frontend argentino aspirante a Full Stack, mi pasión por el desarrollo empezó en 2020, adquirí conocimientos de manera autodidacta durante 2 años. Mi formación académica empezó en CoderHouse, en donde por primera vez me rodeo de personas con una visión a futuro muy parecida a la mia e incrementé mi red de contactos. Hoy en día sigo perfeccionandome en este mundo tan hermoso como lo es la programación.</p>
+            <iframe class="p-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217954.93388873088!2d-64.33443070430336!3d-31.399083973310738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses!2sar!4v1661797787320!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <img class="img-personal" src="https://dummyimage.com/360x440" alt="">
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
