segunda entrega finalizada

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navegador navbar navbar-expand-lg">
             <div class="container-fluid">
-                <button class="navbar-toggler bg-light menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-dark menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -35,7 +35,7 @@
             <p class="text-white">Frontend Developer</p>
         </div>
     </header>
-    <section class="banner d-flex align-items-center flex-wrap text-center">
+    <section class="banner d-flex align-items-center text-center">
         <img class="responsive-none" src="https://dummyimage.com/360x440" alt="">
         <div class="d-flex flex-wrap justify-content-center flex-column">
             <h2 class="p-5 fs-1">“No programo para solucionar problemas, programo para crear soluciones”</h2>
@@ -69,7 +69,7 @@
         </div>
     </section>
     <h3 class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="/pages/portfolio.html">Hacé click acá</a></h3>
-    <section class="d-flex flex-wrap justify-content-end pt-5">
+    <section class="contacto-container d-flex justify-content-end pt-5">
         <div class="section-contacto">
             <h3 class="text-white text-start p-5">¿Te gustó mi trabajo?</h3>
             <p class="text-white ps-5">¿Tenés dudas? ¿Querés trabajar conmigo? <a class="text-decoration-none" href="/pages/contact.html">Contactate acá</a></p>
