--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,68 @@
     <link rel="stylesheet" href="../Styles/normalize.css">
     <link rel="stylesheet" href="../Styles/Style.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Contacto</title>
 </head>
 <body>
+    <header>
+        <nav class="navegador navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler bg-dark menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-enlaces nav-link active text-white" aria-current="page" href="/index.html">Nicanor Britos</a>
+                        <a class="nav-enlaces nav-link" href="../pages/about.html">Sobre Mi</a>
+                        <a class="nav-enlaces nav-link" href="../pages/portfolio.html">Proyectos</a>
+                        <a class="nav-enlaces nav-link" href="../pages/experience.html">Habilidades</a>
+                        <a class="nav-enlaces nav-link" href="../pages/contact.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <img class="fondo-responsive" src="/img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
+        <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <div class="d-flex flex-column align-items-center">
+            <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
+            <p class="text-white">Frontend Developer</p>
+        </div>
+    </header>
+    <h3 class="text-white text-start p-5">Contacto</h3>
+    <section class="d-flex flex-wrap justify-content-between">
+        <div class="form me-5">
+            <div class="form-container ms-3">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label text-secondary">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label text-secondary">Asunto</label>
+                    <input class="form-control" type="text" aria-label="default input example">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label text-secondary">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </div>
+            </div>
+        </div>
+        <div class="redes d-flex mt-5">
+            <ul>
+                <li><a target="_blank" href="https://www.facebook.com/nicanor.britos/"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+                <li><a target="_blank" href="https://www.instagram.com/nick_britos1/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+            </ul>
+            <ul>
+                <li><a target="_blank" href="https://twitter.com/nickbritos1"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/nicanor-britos-04b449245/"><i class="fa-brands fa-linkedin-in"></i>LinkedIn</a></li>
+            </ul>
+        </div>
+        <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
+    </section>
+    <section>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
 </body>
 </html>
