--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navegador navbar navbar-expand-lg">
             <div class="container-fluid">
-                <button class="navbar-toggler menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-dark menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -28,6 +28,7 @@
                 </div>
             </div>
         </nav>
+        <img class="fondo-responsive" src="/img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
         <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
         <div class="d-flex flex-column align-items-center">
             <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
@@ -38,9 +39,9 @@
         <div>
             <h3 class="text-white text-start p-5">Sobre Mi</h3>
             <p class="text-white ps-5 pe-5">Soy un desarrollador Frontend argentino aspirante a Full Stack, mi pasión por el desarrollo empezó en 2020, adquirí conocimientos de manera autodidacta durante 2 años. Mi formación académica empezó en CoderHouse, en donde por primera vez me rodeo de personas con una visión a futuro muy parecida a la mia e incrementé mi red de contactos. Hoy en día sigo perfeccionandome en este mundo tan hermoso como lo es la programación.</p>
-            <iframe class="p-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217954.93388873088!2d-64.33443070430336!3d-31.399083973310738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses!2sar!4v1661797787320!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="p-5 responsive-none" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217954.93388873088!2d-64.33443070430336!3d-31.399083973310738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses!2sar!4v1661797787320!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <img class="img-personal" src="https://dummyimage.com/360x440" alt="">
+        <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
