--- a/pages/experience.html
+++ b/pages/experience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,59 @@
     <link rel="stylesheet" href="../Styles/normalize.css">
     <link rel="stylesheet" href="../Styles/Style.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Habilidades</title>
 </head>
 <body>
+    <header>
+        <nav class="navegador navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler bg-dark menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-enlaces nav-link active text-white" aria-current="page" href="/index.html">Nicanor Britos</a>
+                        <a class="nav-enlaces nav-link" href="../pages/about.html">Sobre Mi</a>
+                        <a class="nav-enlaces nav-link" href="../pages/portfolio.html">Proyectos</a>
+                        <a class="nav-enlaces nav-link" href="../pages/experience.html">Habilidades</a>
+                        <a class="nav-enlaces nav-link" href="../pages/contact.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <img class="fondo-responsive" src="/img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
+        <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <div class="d-flex flex-column align-items-center">
+            <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
+            <p class="text-white">Frontend Developer</p>
+        </div>
+    </header>
+    <section class="d-flex justify-content-end">
+        <div>
+            <h3 class="text-white text-start p-5">Mis Habilidades</h3>
+            <p class="text-white ps-5 pe-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex impedit odio natus deserunt nemo ut quia provident ipsum vitae, totam tempora sed omnis voluptates deleniti labore obcaecati? Beatae, sint necessitatibus!</p>
+            <h4 class="ms-3 text-secondary">Html & Css</h4>
+            <div class="progress m-1 ms-3 me-3">
+                <div class="progress-bar barra-html" role="progressbar" aria-label="Success example" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            <h4 class="ms-3 text-secondary">Javascript</h4>
+            <div class="progress m-1 ms-3 me-3 mt-1">
+                <div class="progress-bar bg-warning text-secondary" role="progressbar" aria-label="Info example" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+            <h4 class="ms-3 text-secondary">ReactJs</h4>
+            <div class="progress m-1 ms-3 me-3">
+                <div class="progress-bar bg-info" role="progressbar" aria-label="Warning example" style="width: 5%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+            <h4 class="ms-3 text-secondary">Backend</h4>
+            <div class="progress m-1 ms-3 me-3">
+                <div class="progress-bar bg-danger" role="progressbar" aria-label="Danger example" style="width: 1%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+        </div>
+        <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
 </body>
 </html>
