--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-enlaces nav-link active text-white" aria-current="page" href="index.html">Nicanor Britos</a>
-                        <a class="nav-enlaces nav-link" href="/pages/about.html">Sobre Mi</a>
-                        <a class="nav-enlaces nav-link" href="/pages/portfolio.html">Proyectos</a>
-                        <a class="nav-enlaces nav-link" href="/pages/experience.html">Habilidades</a>
-                        <a class="nav-enlaces nav-link" href="/pages/contact.html">Contacto</a>
+                        <a class="nav-enlaces nav-link" href="./pages/about.html">Sobre Mi</a>
+                        <a class="nav-enlaces nav-link" href="./pages/portfolio.html">Proyectos</a>
+                        <a class="nav-enlaces nav-link" href="./pages/experience.html">Habilidades</a>
+                        <a class="nav-enlaces nav-link" href="./pages/contact.html">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -46,21 +46,21 @@
         <h3 class="proyectos__titulo m-3 text-white">Mis Proyectos</h3>
         <div class="proyectos-container mt-5">
             <div class="tarjeta">
-                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <figure><img src="./img/que-es-ecommerce.jpeg" alt=""></figure>
                 <div class="contenido">
                     <h3 class="fw-bold text-white">eComerce</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
                 </div>
             </div>
             <div class="tarjeta">
-                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <figure><img src="./img/que-es-ecommerce.jpeg" alt=""></figure>
                 <div class="contenido">
                     <h3 class="fw-bold text-white">eComerce</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
                 </div>
             </div>
             <div class="tarjeta">
-                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <figure><img src="./img/que-es-ecommerce.jpeg" alt=""></figure>
                 <div class="contenido">
                     <h3 class="fw-bold text-white">eComerce</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
@@ -68,11 +68,11 @@
             </div>
         </div>
     </section>
-    <h3 class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="/pages/portfolio.html">Hacé click acá</a></h3>
+    <h3 class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="./pages/portfolio.html">Hacé click acá</a></h3>
     <section class="contacto-container d-flex justify-content-end pt-5">
         <div class="section-contacto">
             <h3 class="text-white text-start p-5">¿Te gustó mi trabajo?</h3>
-            <p class="text-white ps-5">¿Tenés dudas? ¿Querés trabajar conmigo? <a class="text-decoration-none" href="/pages/contact.html">Contactate acá</a></p>
+            <p class="text-white ps-5">¿Tenés dudas? ¿Querés trabajar conmigo? <a class="text-decoration-none" href="./pages/contact.html">Contactate acá</a></p>
         </div>
         <img class="responsive-none" src="https://dummyimage.com/360x440" alt="">
     </section>
