--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,17 +19,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-enlaces nav-link active text-white" aria-current="page" href="/index.html">Nicanor Britos</a>
-                        <a class="nav-enlaces nav-link" href="../pages/about.html">Sobre Mi</a>
-                        <a class="nav-enlaces nav-link" href="../pages/portfolio.html">Proyectos</a>
-                        <a class="nav-enlaces nav-link" href="../pages/experience.html">Habilidades</a>
-                        <a class="nav-enlaces nav-link" href="../pages/contact.html">Contacto</a>
+                        <a class="nav-enlaces nav-link active text-white" aria-current="page" href="../index.html">Nicanor Britos</a>
+                        <a class="nav-enlaces nav-link" href="./about.html">Sobre Mi</a>
+                        <a class="nav-enlaces nav-link" href="./portfolio.html">Proyectos</a>
+                        <a class="nav-enlaces nav-link" href="./experience.html">Habilidades</a>
+                        <a class="nav-enlaces nav-link" href="./contact.html">Contacto</a>
                     </div>
                 </div>
             </div>
         </nav>
-        <img class="fondo-responsive" src="/img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
-        <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <img class="fondo-responsive" src="../img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
+        <video class="video-fondo" src="../img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
         <div class="d-flex flex-column align-items-center">
             <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
             <p class="text-white">Frontend Developer</p>
@@ -39,21 +39,21 @@
     <section class="proyectos d-flex justify-content-center">
         <div class="proyectos-container mt-5">
             <div class="tarjeta">
-                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <figure><img src="../img/que-es-ecommerce.jpeg" alt=""></figure>
                 <div class="contenido">
                     <h3 class="fw-bold text-white">eComerce</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
                 </div>
             </div>
             <div class="tarjeta">
-                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <figure><img src="../img/que-es-ecommerce.jpeg" alt=""></figure>
                 <div class="contenido">
                     <h3 class="fw-bold text-white">eComerce</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
                 </div>
             </div>
             <div class="tarjeta">
-                <figure><img src="/img/que-es-ecommerce.jpeg" alt=""></figure>
+                <figure><img src="../img/que-es-ecommerce.jpeg" alt=""></figure>
                 <div class="contenido">
                     <h3 class="fw-bold text-white">eComerce</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
