--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Desarrollador, Web, Frontend, Nicanor, Portfolio">
+    <meta name="description" content="Si te gustó mi trabajo y querés una pagina personalizada contactate conmigo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/normalize.css">
-    <link rel="stylesheet" href="../Styles/Style.css">
+    <link rel="stylesheet" href="../Styles/estilo.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
     <title>Contacto</title>
 </head>
@@ -34,10 +36,15 @@
             <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
             <p class="text-white">Frontend Developer</p>
         </div>
+        <div class="flecha">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
-    <h3 class="text-white text-start p-5">Contacto</h3>
     <section class="d-flex flex-wrap justify-content-between">
-        <div class="form me-5">
+        <div class="form ms-5 me-5">
+            <h3 class="text-white text-start p-3">Contacto</h3>
             <div class="form-container ms-3">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label text-secondary">Correo Electrónico</label>
@@ -52,7 +59,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-primary" type="submit">Enviar</button>
+                    <button class="btn btn-primary btn-enviar" type="submit">Enviar</button>
                 </div>
             </div>
         </div>
