--- a/pages/experience.html
+++ b/pages/experience.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Desarrollador, Web, Frontend, Nicanor, Portfolio">
+    <meta name="description" content="Mis habilidades graficadas en barras y una breve explicación de mi experiencia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/normalize.css">
-    <link rel="stylesheet" href="../Styles/Style.css">
+    <link rel="stylesheet" href="../Styles/estilo.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
     <title>Habilidades</title>
 </head>
@@ -34,15 +36,33 @@
             <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
             <p class="text-white">Frontend Developer</p>
         </div>
+        <div class="flecha">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
-    <section class="d-flex justify-content-end">
-        <div>
-            <h3 class="text-white text-start p-5">Mis Habilidades</h3>
-            <p class="text-white ps-5 pe-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex impedit odio natus deserunt nemo ut quia provident ipsum vitae, totam tempora sed omnis voluptates deleniti labore obcaecati? Beatae, sint necessitatibus!</p>
-            <h4 class="ms-3 text-secondary">Html & Css</h4>
+    <section class="d-flex justify-content-between">
+        <div class="habilidades">
+            <div class="">
+                <h3 class="text-white text-start p-5">Mis Habilidades</h3>
+                <div class="ms-5 mb-3 iconos-container">
+                    <img src="../img/html_icon.png" alt="HTML">
+                    <img src="../img/css_icon.png" alt="CSS">
+                    <img src="../img/js_icon.png" alt="JS">
+                    <img src="../img/react_icon.png" alt="React">
+                </div>
+            </div>
+            <div class="me-4 ms-4 barras">
+                <h4 class="ms-3 text-secondary">Html</h4>
             <div class="progress m-1 ms-3 me-3">
                 <div class="progress-bar barra-html" role="progressbar" aria-label="Success example" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h4 class="ms-3 text-secondary">CSS</h4>
+            <div class="progress m-1 ms-3 me-3">
+                <div class="progress-bar text-primary" role="progressbar" aria-label="Danger example" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
+            </div>
             <h4 class="ms-3 text-secondary">Javascript</h4>
             <div class="progress m-1 ms-3 me-3 mt-1">
                 <div class="progress-bar bg-warning text-secondary" role="progressbar" aria-label="Info example" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -53,12 +73,10 @@
                 <div class="progress-bar bg-info" role="progressbar" aria-label="Warning example" style="width: 5%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
             </div>
-            <h4 class="ms-3 text-secondary">Backend</h4>
-            <div class="progress m-1 ms-3 me-3">
-                <div class="progress-bar bg-danger" role="progressbar" aria-label="Danger example" style="width: 1%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
-            </div>
+            <br>
+            <br>
         </div>
+            </div>
         <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
