--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Desarrollador, Web, Frontend, Nicanor, Portfolio">
+    <meta name="description" content="Si querés ver más sobre mi trabajo, te dejo mas páginas que desarrollé yo mismo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/normalize.css">
-    <link rel="stylesheet" href="../Styles/Style.css">
+    <link rel="stylesheet" href="../Styles/estilo.css">
     <script src="https://kit.fontawesome.com/8cf43275b6.js" crossorigin="anonymous"></script>
     <title>Mis Proyectos</title>
 </head>
@@ -34,29 +36,31 @@
             <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
             <p class="text-white">Frontend Developer</p>
         </div>
+        <div class="flecha">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
-    <h3 class="m-3 text-white">Mis Proyectos</h3>
     <section class="proyectos d-flex justify-content-center">
-        <div class="proyectos-container mt-5">
-            <div class="tarjeta">
-                <figure><img src="../img/que-es-ecommerce.jpeg" alt=""></figure>
-                <div class="contenido">
-                    <h3 class="fw-bold text-white">eComerce</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
+        <h3 class="m-3 text-white">Mis Proyectos</h3>
+        <div class="d-flex justify-content-center proyectos-container mt-5">
+            <div class="me-3 mb-5">
+                <div class="container2">
+                    <img src="../img/que-es-ecommerce.jpeg">
+                    <div class="centrado">Ver más</div>
                 </div>
             </div>
-            <div class="tarjeta">
-                <figure><img src="../img/que-es-ecommerce.jpeg" alt=""></figure>
-                <div class="contenido">
-                    <h3 class="fw-bold text-white">eComerce</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
+            <div class="me-3 mb-5">
+                <div class="container2">
+                    <img src="../img/que-es-ecommerce.jpeg">
+                    <div class="centrado">Ver más</div>
                 </div>
             </div>
-            <div class="tarjeta">
-                <figure><img src="../img/que-es-ecommerce.jpeg" alt=""></figure>
-                <div class="contenido">
-                    <h3 class="fw-bold text-white">eComerce</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit enim unde quidem eum cum veniam, illo dolorem iure cumque. Eaque obcaecati.</p>
+            <div class="me-3 mb-5">
+                <div class="container2">
+                    <img src="../img/que-es-ecommerce.jpeg">
+                    <div class="centrado">Ver más</div>
                 </div>
             </div>
         </div>
