finalizacion del proyecto final

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
             </div>
         </nav>
-        <img class="fondo-responsive" src="/img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
-        <video class="video-fondo" src="/img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <img class="fondo-responsive" src="./img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
+        <video class="video-fondo" src="./img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
         <div class="d-flex flex-wrap flex-column align-items-center">
             <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
             <p class="text-white">Frontend Developer</p>
@@ -43,43 +43,54 @@
         </div>
     </header>
     <section class="banner d-flex align-items-center text-center">
-        <img class="responsive-none" src="https://dummyimage.com/360x440" alt="">
+        <img class="foto-personal responsive-none" src="./img/NickpcsinfondoBN.png" alt="">
         <div class="d-flex flex-wrap justify-content-center flex-column">
             <h2 class="p-5 fs-1">“No programo para solucionar problemas, programo para crear soluciones”</h2>
             <p class="text-end me-5 text-secondary">Mentalidad adquirida de Lucas Dalto</p>
         </div>
     </section>
-    <section class="proyectos d-flex flex-wrap justify-content-end">
+    <section class="proyectos mt-3 d-flex flex-wrap justify-content-end">
         <h3 class="proyectos__titulo m-3 text-white">Mis Proyectos</h3>
         <div class="d-flex proyectos-container mt-5">
             <div class="me-3 tarjeta">
-                <div class="container2">
-                    <img src="./img/que-es-ecommerce.jpeg">
-                    <div class="centrado">Ver más</div>
-                </div>
+                <a href="https://nickbritos1.github.io/CSGO-FanPage/" target="_blank">
+                    <div class="container2">
+                        <img src="./img/csgo.jpeg">
+                        <div class="centrado">Ver más</div>
+                    </div>
+                </a>
+            </div>
+            <div class="me-3 tarjeta">
+                <a href="https://nickbritos1.github.io/DW-41695.github.io/" target="_blank">
+                    <div class="container2">
+                        <img src="./img/banner.png">
+                        <div class="centrado">Ver más</div>
+                    </div>
+                </a>
             </div>
             <div class="me-3 tarjeta">
                 <div class="container2">
-                    <img src="./img/que-es-ecommerce.jpeg">
-                    <div class="centrado">Ver más</div>
-                </div>
-            </div>
-            <div class="me-3 tarjeta">
-                <div class="container2">
-                    <img src="./img/que-es-ecommerce.jpeg">
-                    <div class="centrado">Ver más</div>
+                    <img src="./img/coming-soon-940x529.jpg">
+                    <div class="centrado cargando">
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <p class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="./pages/portfolio.html">Hacé click acá</a></p>
     </section>
-    <p class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="./pages/portfolio.html">Hacé click acá</a></p>
     <section class="contacto-container d-flex justify-content-end pt-5">
         <div class="section-contacto">
             <h3 class="text-white text-start p-5">¿Te gustó mi trabajo?</h3>
             <p class="text-white ps-5">¿Tenés dudas? ¿Querés trabajar conmigo? <a class="text-decoration-none" href="./pages/contact.html">Contactate acá</a></p>
         </div>
-        <img class="responsive-none" src="https://dummyimage.com/360x440" alt="">
+        <img class="foto-personal responsive-none" src="../img/nickfacha.png" alt="" style="width: 360px; height: 440px;">
     </section>
+    <footer class="d-flex align-items-center justify-content-center">
+        <h6>NickBritos Repositories © 2022</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
