--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -42,29 +42,40 @@
             <span></span>
         </div>
     </header>
-    <section class="proyectos d-flex justify-content-center">
+    <section class="proyectos d-flex justify-content-center flex-wrap">
         <h3 class="m-3 text-white">Mis Proyectos</h3>
-        <div class="d-flex justify-content-center proyectos-container mt-5">
-            <div class="me-3 mb-5">
-                <div class="container2">
-                    <img src="../img/que-es-ecommerce.jpeg">
-                    <div class="centrado">Ver más</div>
-                </div>
+        <div class="d-flex proyectos-container mt-5 mb-5">
+            <div class="me-3 tarjeta">
+                <a href="https://nickbritos1.github.io/CSGO-FanPage/" target="_blank">
+                    <div class="container2">
+                        <img src="../img/csgo.jpeg">
+                        <div class="centrado">Ver más</div>
+                    </div>
+                </a>
             </div>
-            <div class="me-3 mb-5">
-                <div class="container2">
-                    <img src="../img/que-es-ecommerce.jpeg">
-                    <div class="centrado">Ver más</div>
-                </div>
+            <div class="me-3 tarjeta">
+                <a href="https://nickbritos1.github.io/DW-41695.github.io/" target="_blank">
+                    <div class="container2">
+                        <img src="../img/banner.png">
+                        <div class="centrado">Ver más</div>
+                    </div>
+                </a>
             </div>
-            <div class="me-3 mb-5">
+            <div class="me-3 tarjeta">
                 <div class="container2">
-                    <img src="../img/que-es-ecommerce.jpeg">
-                    <div class="centrado">Ver más</div>
+                    <img src="../img/coming-soon-940x529.jpg">
+                    <div class="centrado cargando">
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer class="d-flex align-items-center justify-content-center">
+        <h6>NickBritos Repositories © 2022</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
