--- a/pages/about.html
+++ b/pages/about.html
@@ -44,12 +44,17 @@
     </header>
     <section class="d-flex justify-content-end">
         <div>
-            <h3 class="text-white text-start p-5">Sobre Mi</h3>
-            <p class="text-white ps-5 pe-5">Soy un desarrollador Frontend argentino aspirante a Full Stack, mi pasión por el desarrollo empezó en 2020, adquirí conocimientos de manera autodidacta durante 2 años. Mi formación académica empezó en CoderHouse, en donde por primera vez me rodeo de personas con una visión a futuro muy parecida a la mia e incrementé mi red de contactos. Hoy en día sigo perfeccionandome en este mundo tan hermoso como lo es la programación.</p>
+            <div class="seccion-gris pb-3">
+                <h3 class="text-white text-start p-5">Sobre Mi</h3>
+                <p class="text-white ps-5 pe-5">Soy un desarrollador Frontend argentino aspirante a Full Stack, mi pasión por el desarrollo empezó en 2020, adquirí conocimientos de manera autodidacta durante 2 años. Mi formación académica empezó en CoderHouse, en donde por primera vez me rodeo de personas con una visión a futuro muy parecida a la mia e incrementé mi red de contactos. Hoy en día sigo perfeccionandome en este mundo tan hermoso como lo es la programación.</p>
+            </div>
             <iframe class="p-5 responsive-none" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217954.93388873088!2d-64.33443070430336!3d-31.399083973310738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses!2sar!4v1661797787320!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
+        <img class="foto-personal responsive-none ps-5" src="../img/nickfacha.png" alt="" style="width: 360px; height: 440px;">
     </section>
+    <footer class="d-flex align-items-center justify-content-center">
+        <h6>NickBritos Repositories © 2022</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
