--- a/pages/contact.html
+++ b/pages/contact.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="redes d-flex mt-5">
+        <div class="redes d-flex mt-5 flex-wrap">
             <ul>
                 <li><a target="_blank" href="https://www.facebook.com/nicanor.britos/"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
                 <li><a target="_blank" href="https://www.instagram.com/nick_britos1/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
@@ -73,10 +73,11 @@
                 <li><a target="_blank" href="https://www.linkedin.com/in/nicanor-britos-04b449245/"><i class="fa-brands fa-linkedin-in"></i>LinkedIn</a></li>
             </ul>
         </div>
-        <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
+        <img class="foto-personal" src="../img/NickpcsinfondoBN.png" alt="" style="width: 360px;">
     </section>
-    <section>
-    </section>
+    <footer class="d-flex align-items-center justify-content-center">
+        <h6>NickBritos Repositories © 2022</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
