--- a/pages/experience.html
+++ b/pages/experience.html
@@ -44,8 +44,11 @@
     </header>
     <section class="d-flex justify-content-between">
         <div class="habilidades">
-            <div class="">
-                <h3 class="text-white text-start p-5">Mis Habilidades</h3>
+            <div>
+                <h3 class="text-white text-start ps-5 pt-5 pb-2">Mis Habilidades</h3>
+                <div class="ps-5 pb-4">
+                    <p class="text-white">Mi poca experiencia no logra ser una dificultad para poder demostrar mi facilidad de aprendizaje en el ámbito. A lo largo de mi formación pude evidenciar mi dominio en lenguajes como HTML y CSS, actualmente apunto a mejorar mi habilidad en Javascript y React para llegar a ser un Frontend Developer completo.</p>
+                </div>
                 <div class="ms-5 mb-3 iconos-container">
                     <img src="../img/html_icon.png" alt="HTML">
                     <img src="../img/css_icon.png" alt="CSS">
@@ -54,21 +57,21 @@
                 </div>
             </div>
             <div class="me-4 ms-4 barras">
-                <h4 class="ms-3 text-secondary">Html</h4>
+                <h4 class="ms-3 text-secondary titulos_barritas">Html</h4>
             <div class="progress m-1 ms-3 me-3">
                 <div class="progress-bar barra-html" role="progressbar" aria-label="Success example" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <h4 class="ms-3 text-secondary">CSS</h4>
+            <h4 class="ms-3 text-secondary titulos_barritas">CSS</h4>
             <div class="progress m-1 ms-3 me-3">
                 <div class="progress-bar text-primary" role="progressbar" aria-label="Danger example" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
             </div>
-            <h4 class="ms-3 text-secondary">Javascript</h4>
+            <h4 class="ms-3 text-secondary titulos_barritas">Javascript</h4>
             <div class="progress m-1 ms-3 me-3 mt-1">
                 <div class="progress-bar bg-warning text-secondary" role="progressbar" aria-label="Info example" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
             </div>
-            <h4 class="ms-3 text-secondary">ReactJs</h4>
+            <h4 class="ms-3 text-secondary titulos_barritas">ReactJs</h4>
             <div class="progress m-1 ms-3 me-3">
                 <div class="progress-bar bg-info" role="progressbar" aria-label="Warning example" style="width: 5%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -77,8 +80,11 @@
             <br>
         </div>
             </div>
-        <img class="img-personal responsive-none" src="https://dummyimage.com/360x440" alt="">
+        <img class="foto-personal responsive-none" src="../img/NickpcsinfondoBN.png" alt="" style="width: 360px; height: 440px;">
     </section>
+    <footer class="d-flex align-items-center justify-content-center">
+        <h6>NickBritos Repositories © 2022</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
