debug y arreglo de responsive

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                 </div>
             </div>
         </nav>
-        <img class="fondo-responsive" src="./img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
         <video class="video-fondo" src="./img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
-        <div class="d-flex flex-wrap flex-column align-items-center">
-            <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
-            <p class="text-white">Frontend Developer</p>
+        <div class="d-flex justify-content-center align-items-center nombre-container">
+            <div class="d-flex flex-wrap flex-column align-items-center">
+                <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
+                <p class="text-white">Frontend Developer</p>
+            </div>
         </div>
         <div class="flecha">
             <span></span>
@@ -46,7 +47,7 @@
         <img class="foto-personal responsive-none" src="./img/NickpcsinfondoBN.png" alt="">
         <div class="d-flex flex-wrap justify-content-center flex-column">
             <h2 class="p-5 fs-1">“No programo para solucionar problemas, programo para crear soluciones”</h2>
-            <p class="text-end me-5 text-secondary">Mentalidad adquirida de Lucas Dalto</p>
+            <p class="text-end me-5 text-secondary mentalidad">Mentalidad adquirida de Lucas Dalto</p>
         </div>
     </section>
     <section class="proyectos mt-3 d-flex flex-wrap justify-content-end">
@@ -79,14 +80,14 @@
                 </div>
             </div>
         </div>
-        <p class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="./pages/portfolio.html">Hacé click acá</a></p>
+        <p class="pie mt-2 pe-5 text-white text-end">¿Querés ver todos mis proyectos? <a class="text-decoration-none" href="https://github.com/nickbritos1" target="_blank">Hacé click acá</a></p>
     </section>
     <section class="contacto-container d-flex justify-content-end pt-5">
         <div class="section-contacto">
             <h3 class="text-white text-start p-5">¿Te gustó mi trabajo?</h3>
             <p class="text-white ps-5">¿Tenés dudas? ¿Querés trabajar conmigo? <a class="text-decoration-none" href="./pages/contact.html">Contactate acá</a></p>
         </div>
-        <img class="foto-personal responsive-none" src="../img/nickfacha.png" alt="" style="width: 360px; height: 440px;">
+        <img class="foto-personal responsive-none" src="./img/nickfacha.png" alt="" style="width: 360px; height: 440px;">
     </section>
     <footer class="d-flex align-items-center justify-content-center">
         <h6>NickBritos Repositories © 2022</h6>
