--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
             <span></span>
         </div>
     </header>
-    <section class="d-flex flex-wrap justify-content-between">
+    <section class="d-flex flex-wrap justify-content-between form-contacto">
         <div class="form ms-5 me-5">
             <h3 class="text-white text-start p-3">Contacto</h3>
             <div class="form-container ms-3">
@@ -73,7 +73,7 @@
                 <li><a target="_blank" href="https://www.linkedin.com/in/nicanor-britos-04b449245/"><i class="fa-brands fa-linkedin-in"></i>LinkedIn</a></li>
             </ul>
         </div>
-        <img class="foto-personal" src="../img/NickpcsinfondoBN.png" alt="" style="width: 360px;">
+        <img class="foto-personal responsive-none" src="../img/NickpcsinfondoBN.png" alt="" style="width: 360px;">
     </section>
     <footer class="d-flex align-items-center justify-content-center">
         <h6>NickBritos Repositories © 2022</h6>
