--- a/pages/experience.html
+++ b/pages/experience.html
@@ -44,7 +44,7 @@
     </header>
     <section class="d-flex justify-content-between">
         <div class="habilidades">
-            <div>
+            <div class="p-container">
                 <h3 class="text-white text-start ps-5 pt-5 pb-2">Mis Habilidades</h3>
                 <div class="ps-5 pb-4">
                     <p class="text-white">Mi poca experiencia no logra ser una dificultad para poder demostrar mi facilidad de aprendizaje en el ámbito. A lo largo de mi formación pude evidenciar mi dominio en lenguajes como HTML y CSS, actualmente apunto a mejorar mi habilidad en Javascript y React para llegar a ser un Frontend Developer completo.</p>
