debug y arreglo de responsive ultimos cambios

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
     <title>Sobre Mi</title>
 </head>
 <body>
-    <header>
+    <header>     
         <nav class="navegador navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler bg-dark menu-hamburguesa" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,11 +30,12 @@
                 </div>
             </div>
         </nav>
-        <img class="fondo-responsive" src="../img/beautiful-young-woman-in-the-home-office-working-from-home-teleworking-concept.jpg" alt="">
         <video class="video-fondo" src="../img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
-        <div class="d-flex flex-column align-items-center">
-            <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
-            <p class="text-white">Frontend Developer</p>
+        <div class="d-flex justify-content-center align-items-center nombre-container">
+            <div class="d-flex flex-wrap flex-column align-items-center">
+                <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
+                <p class="text-white">Frontend Developer</p>
+            </div>
         </div>
         <div class="flecha">
             <span></span>
