--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </header>
     <section class="banner d-flex align-items-center text-center">
-        <img class="foto-personal responsive-none" src="./img/NickpcsinfondoBN.png" alt="">
+        <img class="foto-personal responsive-none" src="./img/NickpcsinfondoBN.png" alt="" style="width: 360px; height: 440px;">
         <div class="d-flex flex-wrap justify-content-center flex-column">
             <h2 class="p-5 fs-1">“No programo para solucionar problemas, programo para crear soluciones”</h2>
             <p class="text-end me-5 text-secondary mentalidad">Mentalidad adquirida de Lucas Dalto</p>
