--- a/pages/experience.html
+++ b/pages/experience.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </nav>
-        <video class="video-fondo" src="../img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
+        <video class="video-fond0" src="../img/pexels-pavel-danilyuk-5495845.mp4" autoplay="true" muted="true" loop="true"></video>
         <div class="d-flex justify-content-center align-items-center nombre-container">
             <div class="d-flex flex-wrap flex-column align-items-center">
                 <h1 class="mb-0 text-white nombre">Nicanor Britos</h1>
